--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="place:location:latitude"  content="42.666484" /> 
 	<meta property="place:location:longitude" content="-82.514607" /> 
 	<meta property="og:url" content="http://www.stclairriverhouse.com"/>
-	<meta property="og:image" content="http://www.stclairriverhouse.com/img/bg1.jpg"/>
+	<meta property="og:image" content="http://www.stclairriverhouse.com/img/bg1-opt.jpg"/>
 	<meta property="fb:admins" content="susie.duhaime,andrew.duhaime"/>
 	<meta property="og:email" content="info@StClairRiverHouse.com"/>
 	<meta property="og:description" content="Make this 3bd/2bth vacation rental your home in Marine City. Enjoy the Caribbean-blue water, watch a thousand foot ship go by right in front of you, catch a walleye right from the dock in the spring, or watch the Coast Guard break ice in the winter. "/>
@@ -212,18 +212,18 @@
 					<div class="carousel slide article-slide" id="views-photo-carousel">
 					  <!-- Wrapper for slides -->
 					  <div class="carousel-inner cont-slider">
-						<div class="item active"><img alt="" title="" src="img/Views/View1.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View2.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View3.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View4.jpg"></div>					
-						<div class="item"><img alt="" title="" src="img/Views/View5.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View6.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View7.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View8.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View9.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View91.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View92.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Views/View93.jpg"></div>
+						<div class="item active"><img alt="" title="" src="img/Views/View1-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View2-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View3-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View4-opt.jpg"></div>					
+						<div class="item"><img alt="" title="" src="img/Views/View5-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View6-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View7-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View8-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View9-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View91-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View92-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Views/View93-opt.jpg"></div>
 					  </div>
 					  <!-- Indicators -->
 					  <ol class="carousel-indicators">
@@ -231,14 +231,14 @@
 						<li class="" data-slide-to="1" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View2.jpg"></li>
 						<li class="" data-slide-to="2" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View3.jpg"></li>
 						<li class="" data-slide-to="3" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View4.jpg"></li>
-						<li class="" data-slide-to="4" data-target="#views-photo-carousel"><img alt="" src="img/Views/View5.jpg"></li>
-						<li class="" data-slide-to="5" data-target="#views-photo-carousel"><img alt="" src="img/Views/View6.jpg"></li>
-						<li class="" data-slide-to="6" data-target="#views-photo-carousel"><img alt="" src="img/Views/View7.jpg"></li>
-						<li class="" data-slide-to="7" data-target="#views-photo-carousel"><img alt="" src="img/Views/View8.jpg"></li>
-						<li class="" data-slide-to="8" data-target="#views-photo-carousel"><img alt="" src="img/Views/View9.jpg"></li>
-						<li class="" data-slide-to="9" data-target="#views-photo-carousel"><img alt="" src="img/Views/View91.jpg"></li>
-						<li class="" data-slide-to="10" data-target="#views-photo-carousel"><img alt="" src="img/Views/View92.jpg"></li>
-						<li class="" data-slide-to="11" data-target="#views-photo-carousel"><img alt="" src="img/Views/View93.jpg"></li>
+						<li class="" data-slide-to="4" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View5.jpg"></li>
+						<li class="" data-slide-to="5" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View6.jpg"></li>
+						<li class="" data-slide-to="6" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View7.jpg"></li>
+						<li class="" data-slide-to="7" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View8.jpg"></li>
+						<li class="" data-slide-to="8" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View9.jpg"></li>
+						<li class="" data-slide-to="9" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View91.jpg"></li>
+						<li class="" data-slide-to="10" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View92.jpg"></li>
+						<li class="" data-slide-to="11" data-target="#views-photo-carousel"><img alt="" src="img/Views/thm/View93.jpg"></li>
 					  </ol>
 					</div>
 				</div>                
@@ -258,41 +258,41 @@
 					<div class="carousel slide article-slide" id="house-photo-carousel">
 					  <!-- Wrapper for slides -->
 					  <div class="carousel-inner cont-slider">
-						<div class="item active"><img alt="" title="" src="img/Exterior/FrontOfHouse.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Porch3.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Kitchen.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/DiningRoom.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Downstairs.jpg"></div>					
-						<div class="item"><img alt="" title="" src="img/Interior/Downstairs2.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Downstairs3.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Downstairs4.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/DBath4-White.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/UpstairsBathroom.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/Composite.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/GreenRoom.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Interior/BedroomWithBunks.jpg"></div>						
-						<div class="item"><img alt="" title="" src="img/Interior/FirstFloorPlan.jpg"></div>						
-						<div class="item"><img alt="" title="" src="img/Interior/SecondFloorPlan.jpg"></div>
-						<div class="item"><img alt="" title="" src="img/Exterior/Exterior4.jpg"></div>
+						<div class="item active"><img alt="" title="" src="img/Exterior/FrontOfHouse-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Porch3-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Kitchen-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/DiningRoom-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs-opt.jpg"></div>					
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs2-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs3-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Downstairs4-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/DBath4-White-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/UpstairsBathroom-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/Composite-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/GreenRoom-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Interior/BedroomWithBunks-opt.jpg"></div>						
+						<div class="item"><img alt="" title="" src="img/Interior/FirstFloorPlan-opt.jpg"></div>						
+						<div class="item"><img alt="" title="" src="img/Interior/SecondFloorPlan-opt.jpg"></div>
+						<div class="item"><img alt="" title="" src="img/Exterior/Exterior4-opt.jpg"></div>
 					  </div>
 					  <!-- Indicators -->
 					  <ol class="carousel-indicators">
-						<li class="active" data-slide-to="0" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/FrontOfHouse.jpg"></li>
-						<li class="" data-slide-to="1" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Porch3.jpg"></li>
-						<li class="" data-slide-to="2" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Kitchen.jpg"></li>
-						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DiningRoom.jpg"></li>
-						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs.jpg"></li>
-						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs2.jpg"></li>
-						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs3.jpg"></li>
-						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Downstairs4.jpg"></li>
-						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/DBath4-White.jpg"></li>
-						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/UpstairsBathroom.jpg"></li>
-						<li class="" data-slide-to="10" data-target="#house-photo-carousel"><img alt="" src="img/Interior/Composite.jpg"></li>
-						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/GreenRoom.jpg"></li>
-						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/BedroomWithBunks.jpg"></li>
-						<li class="" data-slide-to="13" data-target="#house-photo-carousel"><img alt="" src="img/Interior/FirstFloorPlan.jpg"></li>
-						<li class="" data-slide-to="14" data-target="#house-photo-carousel"><img alt="" src="img/Interior/SecondFloorPlan.jpg"></li>
-						<li class="" data-slide-to="15" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/Exterior4.jpg"></li>
+						<li class="active" data-slide-to="0" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/thm/FrontOfHouse.jpg"></li>
+						<li class="" data-slide-to="1" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Porch3.jpg"></li>
+						<li class="" data-slide-to="2" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Kitchen.jpg"></li>
+						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/DiningRoom.jpg"></li>
+						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs.jpg"></li>
+						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs2.jpg"></li>
+						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs3.jpg"></li>
+						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs4.jpg"></li>
+						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/DBath4-White.jpg"></li>
+						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/UpstairsBathroom.jpg"></li>
+						<li class="" data-slide-to="10" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Composite.jpg"></li>
+						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/GreenRoom.jpg"></li>
+						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/BedroomWithBunks.jpg"></li>
+						<li class="" data-slide-to="13" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/FirstFloorPlan.jpg"></li>
+						<li class="" data-slide-to="14" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/SecondFloorPlan2.jpg"></li>
+						<li class="" data-slide-to="15" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/thm/Exterior4.jpg"></li>
 					  </ol>
 					</div>
 				</div>
