More image optimization  and external file opt

--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	
-	<!-- Bootstrap Lightbox  -->
-    <link href="css/ekko-lightbox.min.css" rel="stylesheet">
-	
 	<!-- Custom CSS -->
     <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <!-- <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -45,9 +41,9 @@
 	<script src="https://use.fontawesome.com/78c5a34179.js"></script>
 
 	
-<link href="https://www.fontify.me/wf/71392849d002a091e8f5b8f70160d34d" rel="stylesheet" type="text/css">
-<link href="https://www.fontify.me/wf/80aa79216ca7539cf9583442ef908be3" rel="stylesheet" type="text/css">
-<!-- <link href="https://www.fontify.me/wf/5cc0a2829d2fffea539b815a11d3e328" rel="stylesheet" type="text/css"> --><!-- Always in my heard (Script) -->
+<!-- <link href="https://www.fontify.me/wf/71392849d002a091e8f5b8f70160d34d" rel="stylesheet" type="text/css"> -->
+<!-- <link href="https://www.fontify.me/wf/80aa79216ca7539cf9583442ef908be3" rel="stylesheet" type="text/css"> -->
+<!-- <link href="https://www.fontify.me/wf/5cc0a2829d2fffea539b815a11d3e328" rel="stylesheet" type="text/css"> --><!-- Always in my heard (Script)-->
 <link href="https://www.fontify.me/wf/90512cadc6020c537e2503057067ebaf" rel="stylesheet" type="text/css">
 
 <!-- Reviews -->
@@ -277,22 +273,22 @@
 					  </div>
 					  <!-- Indicators -->
 					  <ol class="carousel-indicators">
-						<li class="active" data-slide-to="0" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/thm/FrontOfHouse.jpg"></li>
-						<li class="" data-slide-to="1" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Porch3.jpg"></li>
+						<li class="active" data-slide-to="0" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/thm/FrontOfHouse-thm-opt.jpg"></li>
+						<li class="" data-slide-to="1" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Porch3-thm-opt.jpg"></li>
 						<li class="" data-slide-to="2" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Kitchen.jpg"></li>
-						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/DiningRoom.jpg"></li>
-						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs.jpg"></li>
-						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs2.jpg"></li>
-						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs3.jpg"></li>
-						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs4.jpg"></li>
-						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/DBath4-White.jpg"></li>
-						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/UpstairsBathroom.jpg"></li>
+						<li class="" data-slide-to="3" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/DiningRoom-thm-opt.jpg"></li>
+						<li class="" data-slide-to="4" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs-thm-opt.jpg"></li>
+						<li class="" data-slide-to="5" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs2-thm-opt.jpg"></li>
+						<li class="" data-slide-to="6" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs3-thm-opt.jpg"></li>
+						<li class="" data-slide-to="7" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Downstairs4-thm-opt.jpg"></li>
+						<li class="" data-slide-to="8" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/DBath4-White-thm-opt.jpg"></li>
+						<li class="" data-slide-to="9" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/UpstairsBathroom-thm-opt.jpg"></li>
 						<li class="" data-slide-to="10" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/Composite.jpg"></li>
-						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/GreenRoom.jpg"></li>
-						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/BedroomWithBunks.jpg"></li>
+						<li class="" data-slide-to="11" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/GreenRoom-thm-opt.jpg"></li>
+						<li class="" data-slide-to="12" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/BedroomWithBunks-thm-opt.jpg"></li>
 						<li class="" data-slide-to="13" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/FirstFloorPlan.jpg"></li>
 						<li class="" data-slide-to="14" data-target="#house-photo-carousel"><img alt="" src="img/Interior/thm/SecondFloorPlan2.jpg"></li>
-						<li class="" data-slide-to="15" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/thm/Exterior4.jpg"></li>
+						<li class="" data-slide-to="15" data-target="#house-photo-carousel"><img alt="" src="img/Exterior/thm/Exterior4-thm-opt.jpg"></li>
 					  </ol>
 					</div>
 				</div>
@@ -872,9 +868,6 @@ The St.Clair River House was built as a cottage in 1935 as a Detroiter's vacatio
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-	
-	<!-- Lightbox -->
-    <script src="js/ekko-lightbox.min.js"></script>
 	
 	<!-- Calendar -->
 	<script src="https://secure.ownerreservations.com/widget.js"></script>
