Added OwnerRez Reviews Widget

--- a/index.html
+++ b/index.html
@@ -350,153 +350,21 @@
 	
 	<!-- Reviews -->
 	<section id="reviews">
+            
 	<div class="container">
-            <div class="row">
+		<div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Reviews</h2>
                     <hr class="small">
 				</div>
-			</div>
-    			
-		<div class="row">
-			<div class="col-sm-9">
-				<div class="rating-block">
-					<h4>Average Guest Rating</h4>
-					<h2 class="bold padding-bottom-7">5 <small>/ 5</small></h2>
-					<button type="button" class="btn btn-info btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-info btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-info btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-info btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<button type="button" class="btn btn-info btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button>
-					<!-- <button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
-					  <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-					</button> -->
-				</div>
-			</div>
-			<div class="col-sm-3">
-				<h4>Rating breakdown</h4>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">5 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="5" style="width: 100%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">3</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">4 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="4" aria-valuemin="0" aria-valuemax="5" style="width: 0%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">0</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">3 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="5" style="width: 0%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">0</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">2 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5" style="width: 0%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">0</div>
-				</div>
-				<div class="pull-left">
-					<div class="pull-left" style="width:35px; line-height:1;">
-						<div style="height:9px; margin:5px 0;">1 <span class="glyphicon glyphicon-star"></span></div>
-					</div>
-					<div class="pull-left" style="width:180px;">
-						<div class="progress" style="height:9px; margin:8px 0;">
-						  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5" style="width: 0%"></div>
-						</div>
-					</div>
-					<div class="pull-right" style="margin-left:10px;">0</div>
-				</div>
-			</div>			
-		</div>			
-		
-		<div class="row">
-			<div class="col-sm-12">
-				<hr/>
-				<div class="review-block">
-					<div class="row">						
-						<div class="col-sm-3">
-						<div class="review-block-date">July 10, 2017</div>
-						<script type="text/javascript">document.write(GetStars(5));</script>																	
-						<div class="review-block-name">
-							<a href="#">Melanie A.</a></div>
-							</div>
-							<div class="col-sm-9">
-							<div class="review-block-title">A Perfect Place to Relax</div>							
-							<div class="review-block-description">
-								From my first contact with Andrew and Susie, I was sure it would be a wonderful experience. We used the St. Clair River House as a meeting place for our family during the 4th of July weekend. We represented the states of Iowa, Virginia and Michigan. The home has been meticulously remodeled and decorated throughout. Binoculars were provided to watch the large ships travel on the river as well as books with details and pictures of the ships we would see and their function. We found this very useful during our stay. The kitchen was well stocked with anything you might need during your visit. We especially enjoyed using their professional waffle maker . I could go on and on with positive comments concerning our stay at St. Clair River House but I will instead encourage you to come and stay there to experience it yourself. You will not be disappointed. Enjoy your stay!!							
-							</div>
-						</div>
-					</div>
-					<hr/>
-					<div class="row">						
-						<div class="col-sm-3">
-						<div class="review-block-date">June 29, 2017</div>
-						<script type="text/javascript">document.write(GetStars(5));</script>																	
-						<div class="review-block-name">
-							<a href="#">Londa V.</a></div>
-							</div>
-							<div class="col-sm-9">
-							<div class="review-block-title">This place was beautiful, better then a 5 star!</div>							
-							<div class="review-block-description">
-								This place was beautiful, better then a 5 star!<br><br>I would highky recommend, very clean had all the amenities you need. We only had a 3 night stay, it was very relaxing!							
-							</div>
-						</div>
-					</div>
-					<hr/>
-					<div class="row">						
-						<div class="col-sm-3">
-						<div class="review-block-date">June 22, 2017</div>
-						<script type="text/javascript">document.write(GetStars(5));</script>																	
-						<div class="review-block-name">
-							<a href="#">Earl V.</a></div>
-							</div>
-							<div class="col-sm-9">
-							<div class="review-block-title">Amazing Home with Fantastic Location and Owners</div>							
-							<div class="review-block-description">
-								Words cannot begin to describe how wonderful the home, location and owners of this property are! If you are looking for a rental in this area, look no further as this is undoubtedly the best there is. We were in town for an event at the Algonac State Park and the location was perfect. The home is tastefully decorated and stocked with everything you could need and the recent renovations updated the home yet it still retains its cottage like charm. The pictures of the home posted here really do not do it justice as it is hard to truly capture the condition and size of the home and views that await you. Andrew (the owner) was fantastic and readily available to remedy the minor issues that we had which were primarily due to the fact that we were the first renters of the property. While at the home were were also fortunate enough to meet the neighbors which are also wonderful people and fun to chat with. We are frequent renters via VRBO and this was one of the best overall experiences that we have ever had!! I highly recommend this property if you are in the area to visit, relax or fish the fantastic St. Clair river. We will definitely be back next year...
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div>
-		
-    </div> <!-- /container -->
+		<!-- OwnerRez Reviews widget for St. Clair River House -->
+		<div class="ownerrez-widget pre-scrollable" data-widgetId="e9968178131d4ba9bca9dc81a817df6f" data-propertyId="b3dd12dfc8294ba6bf0bac3e1b04589e" style="height:2500px;"></div>
+		<script src="https://secure.ownerreservations.com/widget.js"></script>
+	</div>
 	</section>
+	
+	
 	<!-- Rates -->
 	<section id="rates" class="portfolio">
         <div class="container">
