Added Book Now Buttons/Fixed calendar bug

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             <li>
                 <a href="#top" onclick=$("#menu-close").click();>Home</a>
             </li>
+			<li>
+                <a href="BookNow.html" target="_blank" onclick=$("#menu-close").click();>BOOK NOW</a>
+            </li>
             <li>
                 <a href="#theViews" onclick=$("#menu-close").click();>The Views</a>
             </li>
@@ -97,6 +100,7 @@
 			<div id="DesktopSpacer" class="hidden-xs">&nbsp;</div>
 			<div id="MobileSpacer" class="visible-xs">&nbsp;</div>
             <h3>Up Close and Personal with the Great Lakes Freighters</h3>
+			<a href="BookNow.html" target="_blank" class="btn btn-light btn-lg" style="padding-left:70px;padding-right:70px;">BOOK NOW	</a>
         </div>
     </header>
 
@@ -498,10 +502,12 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 text-center">
                     <h2>Availability</h2>
                     <hr class="small">
-					<div class="row"><a class="btn btn-primary btn-lg" href="mailto:info@StClairRiverHouse.com?subject=St. Clair River House - Direct Booking Request">Request to Book</a>						
-
+					<div class="row">
+						<a class="btn btn-primary btn-lg" href="BookNow.html" target="_blank">BOOK NOW</a>						
+						<div class="visible-xs" style="height:15px;">&nbsp;</div>
 					<!-- OwnerRez Three Month Calendar widget for St. Clair River House -->
-					<div class="ownerrez-widget" data-widgetId="f3e113e852ae49c893305bf064138571" data-propertyId="b3dd12dfc8294ba6bf0bac3e1b04589e" style="height:350px;margin:0px auto;"></div>
+					<div class="ownerrez-widget visible-xs" data-widgetId="f3e113e852ae49c893305bf064138571" data-propertyId="b3dd12dfc8294ba6bf0bac3e1b04589e" style="height:490px;"></div>
+					<div class="ownerrez-widget hidden-xs" data-widgetId="f3e113e852ae49c893305bf064138571" data-propertyId="b3dd12dfc8294ba6bf0bac3e1b04589e" style="height:350px;"></div>
 												
 				</div>
                 <!-- /.col-lg-10 -->
