--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
 	
 	<script src="https://use.fontawesome.com/78c5a34179.js"></script>
 
-	
-<!-- <link href="https://www.fontify.me/wf/71392849d002a091e8f5b8f70160d34d" rel="stylesheet" type="text/css"> -->
-<!-- <link href="https://www.fontify.me/wf/80aa79216ca7539cf9583442ef908be3" rel="stylesheet" type="text/css"> -->
-<!-- <link href="https://www.fontify.me/wf/5cc0a2829d2fffea539b815a11d3e328" rel="stylesheet" type="text/css"> --><!-- Always in my heard (Script)-->
-<link href="https://www.fontify.me/wf/90512cadc6020c537e2503057067ebaf" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sue+Ellen+Francisco" rel="stylesheet">
 
 <!-- Reviews -->
     <script src="js/reviews.js"></script>
@@ -100,7 +98,7 @@
 			<div id="DesktopSpacer" class="hidden-xs">&nbsp;</div>
 			<div id="MobileSpacer" class="visible-xs">&nbsp;</div>
             <h3>Up Close and Personal with the Great Lakes Freighters</h3>
-			<a href="BookNow.html" target="_blank" class="btn btn-light btn-lg" style="padding-left:70px;padding-right:70px;">BOOK NOW	</a>
+			<a href="BookNow.html" target="_blank" class="btn btn-light btn-lg mainTitle" style="padding-left:70px;padding-right:70px;font-weight:bold;">BOOK NOW	</a>
         </div>
     </header>
 
@@ -332,6 +330,7 @@
                         </div>
 						<div class="col-md-4">
                             <ul>
+								<li>Built-in gas grill</li>
 								<li>Central AC</li>
 								<li>Jetted tub</li>
 								<li>Washer & dryer</li>
@@ -384,35 +383,28 @@
 							<th>Night</th>
 							<th>Weekend Night<br><small>Fri,Sat</small></th>
 							<th>Week<br><small>7 Nights</small></th>
-							<th>Month</th>
+							<th><small>Holidays</small></th>
 						</tr>
 							<tr>
-							<td>Summer</td>
-							<td>$225</td>
+							<td>Memorial Day - Labor Day</td>
 							<td>$275</td>
-							<td>$1,450</td>
-							<td>$4, 500</td>
+							<td>$295</td>
+							<td>$1,695</td>
+							<td>$325</td>
 						</tr>
 							<tr>
-							<td>Fall/Winter/Spring</td>
+							<td>Sept - Oct</td>
+							<td>$175</td>
+							<td>$225</td>
+							<td>$1,195</td>
+							<td>$325</td>
+						</tr>
+							<tr>
+							<td>Off Season</td>
 							<td>$165</td>
-							<td>$240</td>
-							<td>$1,100</td>
-							<td>$2,400</td>
-						</tr>
-							<tr>
-							<td>2017 Holidays</td>
-							<td>$250</td>
-							<td>$250</td>
-							<td>$1,350</td>
-							<td>$3,000</td>
-						</tr>	
-							<tr>
-							<td>2018 Holidays</td>
-							<td>$300</td>
-							<td>$300</td>
-							<td>$1,700</td>
-							<td>$4,500</td>
+							<td>$195</td>
+							<td>$1,095</td>
+							<td>$295</td>
 						</tr>							
 					</table>	
 					<!-- rates table for narrow phone screen -->
@@ -422,48 +414,38 @@
 							<th>Night</th>
 							<th>Weekend Night<br><small>Fri,Sat</small></th>
 							<th>Week<br><small>7 Nights</small></th>
-							<th>Month</th>
+							<th>Holidays</th>
 						</tr>
 						<tr>
-							<td colspan="5"><strong>Summer</strong></td>
+							<td colspan="5"><strong>Memorial Day - Labor Day</strong></td>
 						</tr>						
 						<tr>
 							<td>&nbsp;</td>
-							<td>$225</td>
 							<td>$275</td>
-							<td>$1,450</td>
-							<td>$3,200</td>
+							<td>$295</td>
+							<td>$1,695</td>
+							<td>$325</td>
 						</tr>
 						<tr>
-							<td colspan="5"><strong>Fall/Winter/Spring</strong></td>
+							<td colspan="5"><strong>Sept - Oct</strong></td>
 						</tr>						
+						<tr>
+							<td>&nbsp;</td>
+							<td>$175</td>
+							<td>$225</td>
+							<td>$1,195</td>
+							<td>$325</td>
+						</tr>
+						<tr>
+							<td colspan="5"><strong>Off Season</strong></td>
+						</tr>
 						<tr>
 							<td>&nbsp;</td>
 							<td>$165</td>
-							<td>$240</td>
-							<td>$1,100</td>
-							<td>$2,400</td>
-						</tr>
-						<tr>
-							<td colspan="5"><strong>2017 Holidays</strong></td>
-						</tr>
-						<tr>
-							<td>&nbsp;</td>
-							<td>$250</td>
-							<td>$250</td>
-							<td>$1,350</td>
-							<td>$3,000</td>
-						</tr>	
-						<tr>
-							<td colspan="5"><strong>2018 Holidays</strong></td>
-						</tr>						
-						<tr>
-							<td>&nbsp;</td>
-							<td>$300</td>
-							<td>$300</td>
-							<td>$1,700</td>
-							<td>$4,000</td>
-						</tr>							
+							<td>$195</td>
+							<td>$1,095</td>
+							<td>$295</td>
+						</tr>													
 					</table>
 				</div>
                 <!-- /.col-lg-10 -->
