Added OwnerRez widget for rates table.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -375,79 +375,12 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Rates</h2>
                     <hr class="small">
-						<small>All rates subject to change until reservation is confirmed.<br>Rates don’t include cleaning fee, pet fee or Michigan state lodging tax.</small>
-					<!-- rates table for wide screens -->
-						<table class="table table-striped text-left table-rates table-xs-hide">
-							<tr>
-							<th>Season</th>
-							<th>Night</th>
-							<th>Weekend Night<br><small>Fri,Sat</small></th>
-							<th>Week<br><small>7 Nights</small></th>
-							<th><small>Holidays</small></th>
-						</tr>
-							<tr>
-							<td>Memorial Day - Labor Day</td>
-							<td>$275</td>
-							<td>$295</td>
-							<td>$1,695</td>
-							<td>$325</td>
-						</tr>
-							<tr>
-							<td>Sept - Oct</td>
-							<td>$175</td>
-							<td>$225</td>
-							<td>$1,195</td>
-							<td>$325</td>
-						</tr>
-							<tr>
-							<td>Off Season</td>
-							<td>$165</td>
-							<td>$195</td>
-							<td>$1,095</td>
-							<td>$295</td>
-						</tr>							
-					</table>	
-					<!-- rates table for narrow phone screen -->
-					<table class="table table-striped text-left table-rates table-xs-show">
-						<tr>
-							<th>Season</th>
-							<th>Night</th>
-							<th>Weekend Night<br><small>Fri,Sat</small></th>
-							<th>Week<br><small>7 Nights</small></th>
-							<th>Holidays</th>
-						</tr>
-						<tr>
-							<td colspan="5"><strong>Memorial Day - Labor Day</strong></td>
-						</tr>						
-						<tr>
-							<td>&nbsp;</td>
-							<td>$275</td>
-							<td>$295</td>
-							<td>$1,695</td>
-							<td>$325</td>
-						</tr>
-						<tr>
-							<td colspan="5"><strong>Sept - Oct</strong></td>
-						</tr>						
-						<tr>
-							<td>&nbsp;</td>
-							<td>$175</td>
-							<td>$225</td>
-							<td>$1,195</td>
-							<td>$325</td>
-						</tr>
-						<tr>
-							<td colspan="5"><strong>Off Season</strong></td>
-						</tr>
-						<tr>
-							<td>&nbsp;</td>
-							<td>$165</td>
-							<td>$195</td>
-							<td>$1,095</td>
-							<td>$295</td>
-						</tr>													
-					</table>
-				</div>
+                    <small>All rates subject to change until reservation is confirmed.<br>Rates don’t include cleaning fee, pet fee or Michigan state lodging tax.</small>
+                    <!-- Rate Table Widget -->
+                    <!-- OwnerRez Rates widget for St. Clair River House -->
+                    <div class="ownerrez-widget" data-propertyId="b3dd12dfc8294ba6bf0bac3e1b04589e" data-widget-type="Rate Table Widget - Rates" data-widgetId="7bab17c3532f489b93d88587bff839be"></div>
+                    <script src="https://secure.ownerreservations.com/widget.js"></script>
+                </div>
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
